# gui

./: dependencies.yaml
rqt_snappy_quad_gui/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_snappy_quad_gui/resource/: autopilot_widget.ui
rqt_snappy_quad_gui/scripts/: rqt_snappy_quad_gui
rqt_snappy_quad_gui/src/rqt_snappy_quad_gui/: quad_widget_common.py
suind_gui/: CMakeLists.txt  package.xml  plugin.xml  setup.py
suind_gui/launch/: base_computer.launch
suind_gui/resource/: quad_name_widget.ui
suind_gui/scripts/: suind_gui
suind_gui/src/suind_gui/: autopilot_widget.py  gui_base.py  quad_widget_common.py
